src/test/deca/context/valid/public_assign_to_protected.deca
/*
    Description : Assignation d'une variable public à une variable protected

    Résultat: OK
*/
class A{
    int x = 1;
    protected int y = x;
}
